--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@angular/router": "^15.2.9",
     "@circlon/angular-tree-component": "^11.0.4",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "7.0.0-NodeAndNgUpgrades.1.1.1",
+    "@hmcts/ccd-case-ui-toolkit": "7.0.0-NodeAndNgUpgrades.2-material-legacy",
     "@hmcts/ccpay-web-component": "6.0.0-beta01",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/media-viewer": "2.10.0",
