--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@hmcts/ccd-case-ui-toolkit": "7.0.0-NodeAndNgUpgrades.2-material-legacy",
     "@hmcts/ccpay-web-component": "6.0.0-beta01",
     "@hmcts/frontend": "0.0.50-alpha",
-    "@hmcts/media-viewer": "2.10.0",
+    "@hmcts/media-viewer": "2.10.1-RC.1",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "2.0.0-NodeAndNgUpgrades-04",
@@ -85,7 +85,7 @@
     "@ngrx/router-store": "^15.2.1",
     "@ngrx/store": "^15.2.1",
     "@ngrx/store-devtools": "^15.2.1",
-    "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
     "@rxweb/reactive-form-validators": "2.1.2",
@@ -95,8 +95,8 @@
     "@types/global-agent": "^2.1.0",
     "applicationinsights": "1.7.2",
     "applicationinsights-js": "^1.0.20",
-    "axios": ">=0.21.1",
-    "axios-mock-adapter": "^1.18.2",
+    "axios": "^1.5.1",
+    "axios-mock-adapter": "^1.22.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
@@ -115,7 +115,7 @@
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "3.14.0",
+    "govuk-frontend": "4.0.1",
     "govuk_frontend_toolkit": "^9.0.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.21.3",
@@ -178,9 +178,9 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "allure-js-commons": "^1.3.2",
-    "chai": "^4.2.0",
+    "chai": "^4.3.10",
     "chai-as-promised": "7.1.1",
-    "codeceptjs": "3.3.7",
+    "codeceptjs": "^3.5.5",
     "codeceptjs-cucumber-json-reporter": "^1.0.11",
     "codelyzer": "^5.1.2",
     "cross-env": "^7.0.2",
@@ -193,7 +193,7 @@
     "jasmine-marbles": "^0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
     "jsonwebtoken": "^8.5.1",
-    "karma": "~6.4.0",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~5.1.0",
@@ -209,7 +209,7 @@
     "pa11y-reporter-html": "^2.0.0",
     "portfinder": "^1.0.28",
     "protractor": "~7.0.0",
-    "protractor-cucumber-framework": "6.1.1",
+    "protractor-cucumber-framework": "^9.7.0",
     "protractor-multiple-cucumber-html-reporter-plugin": "1.8.0",
     "protractor-screenshot-utils": "^1.0.5",
     "rest-assured": "^0.1.0",
@@ -238,7 +238,7 @@
     "@stryker-mutator/karma-runner": "^3.0.1",
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^4.0.0",
-    "typescript": "4.8.2"
+    "typescript": "~4.9.5"
   },
   "packageManager": "yarn@3.6.4"
 }
