--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -20,7 +20,7 @@ nodejs:
     MANAGE_ORG_LINK: https://manage-org.aat.platform.hmcts.net/
 
     APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
-    LAUNCH_DARKLY_CLIENT_ID: 5de6610b23ce5408280f2268
+    LAUNCH_DARKLY_CLIENT_ID: ${PREVIEW_LD_KEY}
     PUI_ENV: preview
     FEATURE_SECURE_COOKIE_ENABLED: false
     FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
