--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test:coverage:node": "cd api && yarn coverage",
     "test:crossbrowser": "protractor ./test/e2e/config/crossbrowser.conf.js",
     "test:node": "cd api && yarn test",
-    "test:functional": "yarn playwright install chromium && yarn test:api && yarn run test:test:xuiIntegration && yarn run test:codeceptE2E",
+    "test:functional": "yarn playwright install chromium && yarn test:api && yarn run test:xuiIntegration && yarn run test:codeceptE2E",
     "test:functional:backup": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js",
     "test:functional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js --local",
     "test:fullfunctional": "yarn test:api && yarn run test:codeceptE2E",
