Override the LD Key for Preview (#1143)
* Override LD Key

* Adding ENV

* lint fix

* preview changes

* preview

* preview LD key

* LAUNCH_DARKLY_CLIENT_ID

* LD client

* audit changes

---------

Co-authored-by: sreekanthpuligadda <52752138+sreekanthpuligadda@users.noreply.github.com>
Co-authored-by: connorpgpmcelroy <74015088+connorpgpmcelroy@users.noreply.github.com>

--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -20,6 +20,7 @@ nodejs:
     MANAGE_ORG_LINK: https://manage-org.aat.platform.hmcts.net/
 
     APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+    LAUNCH_DARKLY_CLIENT_ID: ${PREVIEW_LD_KEY}
     PUI_ENV: preview
     FEATURE_SECURE_COOKIE_ENABLED: false
     FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
