fix -EXUI-1030 - styling resolved

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "allowedCommonJsDependencies": [
               "class-transformer",
-              "rx-polling",
+              "rx-polling-hmcts",
               "util",
               "@edium/fsm",
               "applicationinsights-js",
