--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "4.0.1",
+    "govuk-frontend": "3.14.0",
     "govuk_frontend_toolkit": "^9.0.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.21.3",
@@ -146,7 +146,7 @@
     "puppeteer": "^21.3.8",
     "redis": "^3.0.2",
     "rpx-xui-translation": "1.0.0-NodeAndNgUpgrades-02",
-    "rx-polling": "^1.1.0",
+    "rx-polling-hmcts": "^1.1.1",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
