--- a/package.json
+++ b/package.json
@@ -227,7 +227,7 @@
     "ts-node": "10.8.1",
     "ts-node-dev": "^2.0.0-0",
     "tslib": "^2.6.1",
-    "typescript": "~4.8.2",
+    "typescript": "~4.9.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^4.9.4",
@@ -240,8 +240,7 @@
     "@stryker-mutator/html-reporter": "^3.0.1",
     "@stryker-mutator/karma-runner": "^3.0.1",
     "@stryker-mutator/mocha-runner": "^3.0.1",
-    "@stryker-mutator/typescript": "^4.0.0",
-    "typescript": "~4.9.5"
+    "@stryker-mutator/typescript": "^4.0.0"
   },
   "packageManager": "yarn@3.6.4"
 }
