--- a/angular.json
+++ b/angular.json
@@ -23,44 +23,87 @@
               "jwt-decode"
             ],
             "aot": true,
+            "buildOptimizer": true,
             "outputPath": "dist/rpa-pui-manager",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules/govuk_frontend_toolkit/stylesheets",
+                "node_modules/govuk-elements-sass/public/sass",
+                "node_modules/govuk-frontend/govuk/all",
+                "node_modules"
+              ]
+            },
             "polyfills": "src/polyfills.ts",
-            "preserveSymlinks": true,
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
+              {
+                "glob": "**/*",
+                "input": "node_modules/@hmcts/media-viewer/assets/",
+                "ignore": ["**/*.sass"],
+                "output": "/assets"
+              },
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "preserveSymlinks": true
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
+                "fonts": true
+              },
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "6mb",
+                  "maximumError": "10mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ]
             }
+          },
+          "development": {
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }
+            ],
+            "optimization": false,
+            "outputHashing": "all",
+            "sourceMap": false,
+            "buildOptimizer": false,
+            "namedChunks": false,
+            "aot": true,
+            "extractLicenses": false,
+            "vendorChunk": false
           }
         },
         "serve": {
