--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -36,6 +36,8 @@ nodejs:
         - appinsights-instrumentationkey-mo
         - google-analytics-key
         - launch-darkly-client-id
+        - system-user-name
+        - system-user-password
   autoscaling:
     enabled: false
 redis:
