--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "@angular/router": "^15.2.9",
     "@circlon/angular-tree-component": "^11.0.4",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "7.0.0-rc8",
+    "@hmcts/ccd-case-ui-toolkit": "7.0.0",
     "@hmcts/ccpay-web-component": "6.0.2",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/media-viewer": "2.10.1-RC.1",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/rpx-xui-common-lib": "2.0.0-NodeAndNgUpgrades-05",
+    "@hmcts/rpx-xui-common-lib": "2.0.1",
     "@hmcts/rpx-xui-node-lib": "2.27.1",
     "@ng-idle/core": "^10.0.0",
     "@ng-idle/keepalive": "^10.0.0",
@@ -145,7 +145,7 @@
     "playwright": "^1.18",
     "puppeteer": "^21.3.8",
     "redis": "^3.0.2",
-    "rpx-xui-translation": "1.0.0-NodeAndNgUpgrades-02",
+    "rpx-xui-translation": "1.0.2",
     "rx-polling-hmcts": "^1.1.1",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.4.0",
