--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test:fullfunctional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/fullfunctional.conf.js --local",
     "test:mutation": "echo 'not implemented'",
     "test:mutation:fix": "NODE_ENV=development npx nyc stryker run stryker.node.conf.js ",
-    "test:ng": "ng test rpa-pui-manager",
+    "test:ng": "ng test",
     "test:ngIntegration": "yarn test:ngIntegrationMockEnv && ng e2e --protractorConfig=./test/ngIntegration/config/protractor.conf.js",
     "test:ngIntegrationMockEnv": "node -e 'require(`./test/nodeMock/availablePortFinder.js`).configureTestProxyPort()'",
     "test:node:watch": "cd api && yarn test:watch",
